--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -313,13 +313,10 @@ h1 {
           font-size: 18px;
           border: none;
           background: transparent;
-          color: $lightBlack;
           width: auto;
           margin: 1rem auto;
           padding: 0.8rem 1.8rem;
-          border-radius: 9px;
           cursor: pointer;
-          box-shadow: 0px 3px 6px #00000029;
         }
         #enter-send {
           background-color: $darkBlue;
@@ -526,5 +523,54 @@ h1 {
   }
   .successful-pass-change.active {
     display: block;
+  }
+  .my-profile {
+    background-color: red;
+    width: 50%;
+    margin: 8rem auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 0.5rem;
+    padding: 3rem 2rem 3rem 5rem;
+    height: 40%;
+    border-radius: 9px;
+    background-color: $whiteColor;
+    box-shadow: 0px 3px 6px #00000029;
+    form {
+      display: flex;
+      flex-direction: column;
+      row-gap: 0.5rem;
+      width: 100%;
+      h3 {
+        font-size: 18px;
+        font-weight: bold;
+        align-self: center;
+        margin-bottom: 2rem;
+      }
+      label {
+        color: #9191a0;
+        margin-bottom: 0;
+        font-size: 13px;
+      }
+      input {
+        border: 1px solid $cardsBorderColor;
+        border-radius: 4px;
+        padding: 1rem;
+        margin-bottom: 1rem;
+        width: 90%;
+        margin: 0 auto 1 auto;
+      }
+      .cancel-button {
+        font-size: 18px;
+        border: none;
+        background: transparent;
+        width: auto;
+        margin: 1rem auto;
+        padding: 0.8rem 1.8rem;
+        cursor: pointer;
+      }
+    }
   }
 }
