--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -267,7 +267,8 @@ h1 {
         margin-bottom: 0;
         font-size: 13px;
       }
-      input {
+      input,
+      select {
         border: 1px solid $cardsBorderColor;
         border-radius: 4px;
         padding: 1rem;
@@ -525,36 +526,57 @@ h1 {
     display: block;
   }
   .my-profile {
-    background-color: red;
     width: 50%;
     margin: 8rem auto;
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     row-gap: 0.5rem;
-    padding: 3rem 2rem 3rem 5rem;
     height: 40%;
     border-radius: 9px;
     background-color: $whiteColor;
     box-shadow: 0px 3px 6px #00000029;
+    .options-wrapper,
+    hr {
+      display: flex;
+      justify-content: space-between;
+      width: 80%;
+      margin: 0 auto;
+      .profile-option {
+        font-size: 18px;
+      }
+      .profile-option:focus {
+        font-weight: bold;
+      }
+      .profile-option.active {
+        font-weight: bold;
+      }
+    }
+    h3 {
+      font-size: 18px;
+      font-weight: bold;
+      align-self: center;
+      margin-bottom: 2rem;
+      padding: 3rem 0rem;
+    }
+    hr {
+      margin: 2rem auto 0 auto;
+    }
     form {
       display: flex;
       flex-direction: column;
       row-gap: 0.5rem;
       width: 100%;
-      h3 {
-        font-size: 18px;
-        font-weight: bold;
-        align-self: center;
-        margin-bottom: 2rem;
-      }
+      margin: 0 auto;
+      padding: 3rem 2rem 3rem 5rem;
       label {
         color: #9191a0;
         margin-bottom: 0;
         font-size: 13px;
       }
-      input {
+      input,
+      select {
         border: 1px solid $cardsBorderColor;
         border-radius: 4px;
         padding: 1rem;
@@ -562,15 +584,51 @@ h1 {
         width: 90%;
         margin: 0 auto 1 auto;
       }
-      .cancel-button {
-        font-size: 18px;
-        border: none;
-        background: transparent;
-        width: auto;
-        margin: 1rem auto;
-        padding: 0.8rem 1.8rem;
-        cursor: pointer;
+      .agree-policies-wrapper {
+        display: flex;
+        width: 60%;
+        align-items: flex-start;
+        #my-profile-agree-policies {
+          width: 10%;
+        }
+        label {
+          margin-right: 0.5rem;
+          cursor: pointer;
+          margin-top: 0;
+          span {
+            color: $primaryColor;
+          }
+        }
+      }
+      .my-profile-buttons {
+        display: flex;
+        justify-content: space-around;
+        width: 90%;
+        .cancel-button {
+          font-size: 18px;
+          border: none;
+          background: transparent;
+          width: auto;
+          margin: 1rem auto;
+          padding: 0.8rem 1.8rem;
+          cursor: pointer;
+        }
+        .enter {
+          background-color: $darkBlue;
+          color: $whiteColor;
+          font-size: 18px;
+          border: none;
+          border-radius: 9px;
+          box-shadow: 0px 3px 6px #00000029;
+          width: auto;
+          margin: 1rem auto;
+          padding: 0.8rem 1.8rem;
+          cursor: pointer;
+        }
       }
     }
+  }
+  .my-profile.active {
+    display: flex;
   }
 }
